web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcBottomFadeout/wcBottomFadeout.directive.scss
/*!
 * Copyright (C) 2018 Inera AB (http://www.inera.se)
 *
 * This file is part of sklintyg (https://github.com/sklintyg).
 *
 * sklintyg is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * sklintyg is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

.modal {
  wc-bottom-fadeout {
    .bottom-fadeout-gradient {
      padding: 0 15px;
    }
  }
}

wc-bottom-fadeout {

  .bottom-fadeout-gradient {
    @extend %bottom-gradient;
  }

  wc-alert-message .alert {
    padding-bottom: 12px;
  }

  display: block;
  position: relative;

  .scrollable-body {
    overflow-y: auto;
    max-height: 50vh;
    position: relative;

    .modal-body {
      margin: 15px 15px $wc-text-fadeout-height;
      padding: 0;
      overflow-y: visible;
      max-height: none;
    }
  }
}

